--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:pim0ZobW8tru8pK45zJ9PLHq11sJwozTN+ePuPz3ECc=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://192.168.1.14/chat/public/
+APP_URL=chat4ur.herokuapp.com/chat/public/
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
