--- a/.env
+++ b/.env
@@ -3,8 +3,7 @@ APP_ENV=local
 APP_KEY=base64:pim0ZobW8tru8pK45zJ9PLHq11sJwozTN+ePuPz3ECc=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=chat4ur.herokuapp.com/chat/public/
-
+APP_URL=chat4ur.herokuapp.com/
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
