--- a/.env
+++ b/.env
@@ -3,13 +3,13 @@ APP_ENV=local
 APP_KEY=base64:pim0ZobW8tru8pK45zJ9PLHq11sJwozTN+ePuPz3ECc=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=chat4ur.herokuapp.com/
+APP_URL=chat4ur.herokuapp.com/chat/public
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=chat
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=s
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
