--- a/.env
+++ b/.env
@@ -5,11 +5,11 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=chat4ur.herokuapp.com/chat/public
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=chat4ur.herokuapp.com
 DB_PORT=3306
 DB_DATABASE=chat
 DB_USERNAME=root
-DB_PASSWORD=s
+DB_PASSWORD=
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
