--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,14 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
 DB_PASSWORD=secret
+DB_CONNECTION=mysql
+DB_HOST=5.196.27.121
+DB_PORT=3306
+DB_DATABASE=chat
+DB_USERNAME=root
+DB_PASSWORD=b1zu-KC56-
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
